# pykeypass

./: .coverage  .gitignore  README.md  config.py  install.bat  protected.yaml  pwhash.py  pykeypass.py  pyproject.toml  requirements.txt  requirements_remove.txt  setup.py  test.py  test_github.py  test_local.py  uninstall.bat  uninstall.py  uninstall.sh
.github/workflows/: python-publish.yml  python3.6_app_windows_test.yml  python_3.10_windows_test.yml  python_3.11_windows_test.yml_bak  python_3.12_windows_test.yml  python_3.6_windows_test.yml  python_3.7_windows_test.yml  python_3.8_windows_test.yml  python_3.9_windows_test.yml  python_3.x_windows_test.yml  python_pypy3_windows_test.yml  pythonapp.yml  pythonapp_windows.yml  pythonapp_windows_test.yml  pythonapp_windwos_test.yml
test/: Database.kdbx  Database_key.kdbx  Database_key.key  test_github.py  test_local.py
test/.pykeypass/: pykeepass.kdbx
